# shoc

./: .gitignore  Makefile.in  README.txt  configure  configure.ac  shoc_ocl_configure.sh
doc/: Makefile.in
src/: Makefile.in
src/common/: Makefile.in
src/cuda/: Makefile.in
src/cuda/level0/: Makefile.in
src/cuda/level0/epmpi/: Makefile.in
src/cuda/level1/: Makefile.in
src/cuda/level1/bfs/: Makefile.in
src/cuda/level1/fft/: Makefile.in
src/cuda/level1/gemm/: Makefile.in
src/cuda/level1/md/: Makefile.in
src/cuda/level1/md5hash/: Makefile.in
src/cuda/level1/neuralnet/: Makefile.in
src/cuda/level1/reduction/: Makefile.in
src/cuda/level1/scan/: Makefile.in
src/cuda/level1/sort/: Makefile.in
src/cuda/level1/spmv/: Makefile.in
src/cuda/level1/stencil2d/: Makefile.in
src/cuda/level1/triad/: Makefile.in
src/cuda/level2/: Makefile.in
src/cuda/level2/qtclustering/: Makefile.in
src/mpi/: Makefile.in
src/mpi/common/: Makefile.in
src/mpi/contention/: Makefile.in
src/mpi/contention-mt/: Makefile.in
src/opencl/: Makefile.in
src/opencl/common/: Makefile.in
src/opencl/level0/: Makefile.in
src/opencl/level1/: Makefile.am  Makefile.in
src/opencl/level1/tpch/: Makefile.am  Makefile.in  add.cpp  add.hpp  innerJoin.cpp  innerJoin.hpp  mul.cpp  mul.hpp  product.cpp  product.hpp  project.cpp  project.hpp  select.cpp  select.hpp  sub.cpp  sub.hpp  tpch.cl  tpch.cpp  tpch.h  unique.cpp  unique.hpp
src/opencl/level2/: Makefile.in
src/stability/: Makefile.in
src/stability/epmpi/: Makefile.in
tools/: Makefile.in  driver.pl
(+48 files in other folders)
